--- a/src/todolist.css
+++ b/src/todolist.css
@@ -15,7 +15,7 @@ input{
     border: 1px solid black;
     height: 2.2rem;
     width: 18%;
-    background-color: rgb(30, 255, 0);
+    background-color: #21B6A8;
     position: relative;
     top: -4px;
     /* border-radius: 15px; */
